--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
       <!--=============== FAVICON ===============-->
-      <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+      <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 
       <!--=============== REMIXICONS ===============-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="">
 
       <!--=============== CSS ===============-->
-      <link rel="stylesheet" href="assets/css/styles.css">
+      <link rel="stylesheet" href="styles.css">
 
       <title>Ritesh Raj-Portfolio</title>
    </head>
@@ -69,11 +69,11 @@
 
                <div class="home__perfil">
                   <div class="home__image">
-                     <img src="assets/img/home-perfil.jpg" alt="image" class="home__img">
+                     <img src="home-perfil.jpg" alt="image" class="home__img">
                      <div class="home__shadow"></div>
 
-                     <img src="assets/img/curved-arrow.svg" alt="" class="home__arrow">
-                     <img src="assets/img/random-lines.svg" alt="" class="home__line">
+                     <img src="curved-arrow.svg" alt="" class="home__arrow">
+                     <img src="random-lines.svg" alt="" class="home__line">
 
                      <div class="geometric-box"></div>
                   </div>
@@ -119,12 +119,12 @@
 
                <div class="about__perfil">
                   <div class="about__image">
-                     <img src="assets/img/about-perfil.jpg" alt="image" class="about__img">
+                     <img src="about-perfil.jpg" alt="image" class="about__img">
 
                      <div class="about__shadow"></div>
 
                      <div class="geometric-box"></div>
-                     <img src="assets/img/random-lines.svg" alt="" class="about__line">
+                     <img src="random-lines.svg" alt="" class="about__line">
                      <div class="about__box"></div>
                   </div>
                </div>
@@ -230,7 +230,7 @@
             <div class="projects__container container grid">
                <article class="projects__card">
                   <div class="projects__image">
-                     <img src="assets/img/project-1.jpg" alt="image" class="project__img">
+                     <img src="project-1.jpg" alt="image" class="project__img">
 
                      <a href="https://github.com/RiteshRaj4341/todolists" class="projects__button button">
                         <i class="ri-arrow-right-up-line"></i>
@@ -255,7 +255,7 @@
 
                <article class="projects__card">
                   <div class="projects__image">
-                     <img src="assets/img/project-5.jpg" alt="image" class="project__img">
+                     <img src="project-5.jpg" alt="image" class="project__img">
 
                      <a href="https://github.com/RiteshRaj4341/webloginpage" class="projects__button button">
                         <i class="ri-arrow-right-up-line"></i>
@@ -282,7 +282,7 @@
             
                <article class="projects__card">
                   <div class="projects__image">
-                     <img src="assets/img/project-2.jpg" alt="image" class="project__img">
+                     <img src="project-2.jpg" alt="image" class="project__img">
 
                      <a href="https://github.com/RiteshRaj4341/Wheather" class="projects__button button">
                         <i class="ri-arrow-right-up-line"></i>
@@ -307,7 +307,7 @@
 
                <article class="projects__card">
                   <div class="projects__image">
-                     <img src="assets/img/project-4.jpg" alt="image" class="project__img">
+                     <img src="project-4.jpg" alt="image" class="project__img">
 
                      <a href="https://github.com/RiteshRaj4341/Netflix" class="projects__button button">
                         <i class="ri-arrow-right-up-line"></i>
@@ -332,7 +332,7 @@
 
                <article class="projects__card">
                   <div class="projects__image">
-                     <img src="assets/img/project-3.jpg" alt="image" class="project__img">
+                     <img src="project-3.jpg" alt="image" class="project__img">
 
                      <a href="https://github.com/RiteshRaj4341/Calculator" class="projects__button button">
                         <i class="ri-arrow-right-up-line"></i>
@@ -359,7 +359,7 @@
 
                <article class="projects__card">
                   <div class="projects__image">
-                     <img src="assets/img/project-6.jpg" alt="image" class="project__img">
+                     <img src="project-6.jpg" alt="image" class="project__img">
 
                      <a href="https://github.com/RiteshRaj4341/Temperature-Converter" class="projects__button button">
                         <i class="ri-arrow-right-up-line"></i>
@@ -442,7 +442,7 @@
                </div>
 
                <div class="contact__social">
-                  <img src="assets/img/curved-arrow.svg" alt="" class="contact__social-arrow">
+                  <img src="curved-arrow.svg" alt="" class="contact__social-arrow">
                   
                   <div class="contact__social-data">
                      <div>
@@ -501,6 +501,6 @@
       <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
       <!--=============== MAIN JS ===============-->
-      <script src="assets/js/main.js"></script>
+      <script src="main.js"></script>
    </body>
 </html>
